# p1

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_openai.py
